<?xml version="1.0"?>
<package>
  <name>ice9_unitree</name>
  <version>1.0.0</version>
  <description>
    ICE9 Unitree GO 1 ROS package.
  </description>
  <url>https://github.com/ICE9-Robotics/ice9_unitree</url>

  <author email="anthony.jiang.github@outlook.com">Zhengyi Jiang</author>
  <maintainer email="anthony.jiang.github@outlook.com">Zhengyi Jiang</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>unitree_legged_real</run_depend>
  <run_depend>emlid_reach_ros</run_depend>
  <run_depend>robot_localisation</run_depend>
  <run_depend>rtkgps_odom_matcher</run_depend>

  <export>
  </export>
</package>